v1.5.3 - TBD
NEW:
  Some vanilla items can now be found in the ADDSynth Materials Creative Tab.
  Unidentified Item drops now drop for the Piglin, Piglin Brute, Hoglin, Zoglin, and the Warden.
  New debug feature: We now allow more Tag types to be dumped in ADDSynthCore config.
CHANGED:
  The Matter Compressor's crafting recipe changed to use 3 Energy Stabilizers instead of 1.
  Changed the Crystal Energy Extractor's crafting recipe to use Silver Plates instead of Aluminum Plates.
  Items in the Materials Creative Tab are sorted by Item type again, instead of by Material type.
  The count_blocks and sample_ores commands max size has increased from 32 to 40.
  Unidentified Item Configuration settings have moved to their own config file.
REMOVED:
  Removed Gem shards. (Been meaning to do this for a while.)
   - As a result, the Crystal Matter Generator now produces 1 random Gem every 1.5 hours using
     2,700,000 total energy.
  You can no longer control whether Lasers set Entities on fire. Now, Lasers will always set Entities on fire.
  You can no longer configure whether Laser damage is fixed or scales with world difficulty.
    Laser damage will now always adjust based on world difficulty.
FIXED:
  Minecraft 1.19.4 version only: Fixed Lasers crashing the game when it hit any Entity. Oh, my gawd......
  Minecraft 1.19.4 version only: Laser Damage is once again tagged as Fire type damage,
    meaning you will not take any damage from Lasers if you are immune to fire.
  We now have a translated death message if you died from a Laser.
  Fixed not dropping custom mob loot for the Zombified Piglin, ever since the ID changed in Minecraft 1.16.



v1.5.2 - April 5, 2025
NEW:
  It is now possible to get a Soul Speed Enchanted Book by inserting an Amethyst in the Magic Infuser.
  Now, the Dimensional Anchor itself (as an item entity) will not travel to other dimensions.
  Now detects the WTHIT (What The Hell Is That) mod.
  Added EMC value to Unimatter.
CHANGES: